--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "gulp-louis",
-  "version": "1.0.10",
+  "version": "1.0.11",
+  "homepage": "https://github.com/AvraamMavridis/gulp-louis",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AvraamMavridis/gulp-louis"
+  },
+  "author": "Avraam Mavridis <avr.mav@gmail.com> (https://github.com/AvraamMavridis)",
   "description": "Performance measurment plugin for gulp based on Phantomas",
   "main": "index.js",
   "scripts": {
