--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "chai": "^2.0.0",
     "cli-color": "^0.3.2",
+    "gulp-connect": "^2.2.0",
     "gulp-util": "^3.0.3",
     "joi": "^5.1.0",
     "mocha": "^2.1.0",
