--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "gulp-louis",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "homepage": "https://github.com/AvraamMavridis/gulp-louis",
   "repository": {
     "type": "git",
     "url": "https://github.com/AvraamMavridis/gulp-louis"
   },
-  "author": "Avraam Mavridis <avr.mav@gmail.com> (https://github.com/AvraamMavridis)",
+  "author": "Avraam Mavridis",
   "description": "Performance measurment plugin for gulp based on Phantomas",
   "main": "louis.js",
   "scripts": {
@@ -15,17 +15,17 @@
   "keywords": [
     "perfmatters, phantomas, performance, speed, analyze, website,website performance tools, website performance monitoring, website performance metrics, website performance optimization, website performance analyzer"
   ],
-  "author": "Avraam Mavridis",
   "license": "ISC",
   "dependencies": {
     "cli-color": "^1.1.0",
     "gulp-connect": "^5.0.0",
-    "gulp-util": "^3.0.3",
+    "gulp-util": "^3.0.7",
     "joi": "^5.1.0",
-    "phantomas": "^1.9.0"
+    "phantomas": "^1.16.0"
   },
   "devDependencies": {
     "chai": "^2.0.0",
+    "gulp": "^3.9.1",
     "mocha": "^2.1.0"
   }
 }
